# H_RDT

./: .gitignore  README_MINI_VLA_EGODEX.md  pyproject.toml  requirements.txt  rollout_mini_vla_world_model.py  train_mini_egodex.sh
configs/: mini_vla_egodex.yaml
datasets/pretrain/: encode_lang_batch.py  mini_egodex_dataset.py
models/: mini_vla_diffusion.py
models/encoder/: t5_encoder.py
train/: eval_mini_vla.py  train_mini_vla.py
