[project]
name = "h-rdt"
version = "0.1.0"
description = "H-RDT and lightweight EgoDex mini-VLA training environment"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "accelerate==0.34.2",
  "diffusers==0.27.2",
  "h5py==3.11.0",
  "huggingface-hub[cli]==0.25.0",
  "imgaug==0.4.0",
  "numpy==1.26.4",
  "opencv-python==4.10.0.84",
  "packaging==24.0",
  "pandas==2.2.3",
  "pillow>=10.0.0",
  "pyyaml>=6.0.1",
  "safetensors>=0.4.3",
  "scipy>=1.11.0",
  "sentencepiece==0.2.0",
  "tensorboard>=2.17.0",
  "timm==1.0.3",
  "torch==2.4.1",
  "torchvision==0.19.1",
  "tqdm>=4.66.0",
  "transformers==4.43.0",
]

[project.optional-dependencies]
wandb = [
  "wandb==0.21.0",
]
hrdt = [
  "deepspeed==0.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.uv]
package = false
