[project]
name = "h-rdt"
version = "0.1.0"
description = "H-RDT and lightweight EgoDex mini-VLA training environment"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "accelerate==0.34.2",
  "backports.strenum==1.2.8",
  "decord>=0.6.0",
  "diffusers==0.27.2",
  "einops==0.8.1",
  "fire==0.7.1",
  "h5py==3.11.0",
  "hydra-core>=1.3.0",
  "huggingface-hub[cli]==0.25.0",
  "imageio==2.37.0",
  "imgaug==0.4.0",
  "matplotlib==3.10.6",
  "mediapy==1.2.4",
  "numpy==1.26.4",
  "openai==1.99.9",
  "opencv-python-headless==4.10.0.84",
  "packaging==24.0",
  "pandas==2.2.3",
  "pillow>=10.0.0",
  "pyarrow>=15.0.0",
  "pyyaml>=6.0.1",
  "pytorchvideo==0.1.5",
  "safetensors>=0.4.3",
  "scipy>=1.11.0",
  "sentencepiece==0.2.0",
  "tensorboard>=2.17.0",
  "timm==1.0.3",
  "torch==2.7.1",
  "torchvision==0.22.1",
  "tqdm>=4.66.0",
  "transformers==4.43.0",
  "wandb==0.21.0",
]

[project.optional-dependencies]
hrdt = [
  "deepspeed==0.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.uv]
package = false

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
